--- a/src/app/events/events.component.html
+++ b/src/app/events/events.component.html
@@ -1,1 +1,20 @@
-<p>events works!</p>
+<div class="content">
+  <div class="event">
+    <app-event></app-event>
+  </div>
+  <div class="event">
+    <app-event></app-event>
+  </div>
+  <div class="event">
+    <app-event></app-event>
+  </div>
+  <div class="event">
+    <app-event></app-event>
+  </div>
+  <div class="event">
+    <app-event></app-event>
+  </div>
+  <div class="event">
+    <app-event></app-event>
+  </div>
+</div>
