--- a/src/app/event/event.component.html
+++ b/src/app/event/event.component.html
@@ -13,6 +13,7 @@
     </p>
     <div class="options">
       <button mat-raised-button color="primary">REGISTER!</button>
+      <button mat-raised-button color="warn" (click)="openDialog('70ms', '70ms')">CANCEL REGISTRATION</button>
       <button mat-raised-button color="accent">SEE MORE</button>
     </div>
   </mat-card-content>
