--- a/src/app/my-events/my-events.component.html
+++ b/src/app/my-events/my-events.component.html
@@ -1,1 +1,21 @@
-<p>my-events works!</p>
+<div class="content">
+  <h1>MY EVENTS</h1>
+  <div class="event">
+    <app-event></app-event>
+  </div>
+  <div class="event">
+    <app-event></app-event>
+  </div>
+  <div class="event">
+    <app-event></app-event>
+  </div>
+  <div class="event">
+    <app-event></app-event>
+  </div>
+  <div class="event">
+    <app-event></app-event>
+  </div>
+  <div class="event">
+    <app-event></app-event>
+  </div>
+</div>
