feature/event-info-view

--- a/src/app/event/event.component.html
+++ b/src/app/event/event.component.html
@@ -14,7 +14,7 @@
     <div class="options">
       <button mat-raised-button color="primary">REGISTER!</button>
       <button mat-raised-button color="warn" (click)="openDialog('70ms', '70ms')">CANCEL REGISTRATION</button>
-      <button mat-raised-button color="accent">SEE MORE</button>
+      <button mat-raised-button color="accent" (click)="eventInfo()">SEE MORE</button>
     </div>
   </mat-card-content>
 </mat-card>
