feature/create-event

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -3,6 +3,7 @@
     <span><mat-icon>cake</mat-icon>Full Events</span>
     <div class="spacer"></div>
     <a mat-button routerLink="">Events</a>
+    <a mat-button routerLink="myevents">New event</a>
     <a mat-button routerLink="myevents">My events</a>
     <a mat-button routerLink="myprofile">Profile</a>
     <a mat-raised-button routerLink="login" color="accent">Log in</a>
