--- a/src/app/event/event.component.html
+++ b/src/app/event/event.component.html
@@ -15,6 +15,7 @@
       <button mat-raised-button color="primary">REGISTER!</button>
       <button mat-raised-button color="warn" (click)="openDialog('70ms', '70ms')">CANCEL REGISTRATION</button>
       <button mat-raised-button color="accent" (click)="eventInfo()">SEE MORE</button>
+      <button mat-raised-button color="green" (click)="editEvent()">EDIT</button>
     </div>
   </mat-card-content>
 </mat-card>
