--- a/src/app/events/events.component.html
+++ b/src/app/events/events.component.html
@@ -1,20 +1,5 @@
 <div class="content">
-  <div class="event">
-    <app-event></app-event>
-  </div>
-  <div class="event">
-    <app-event></app-event>
-  </div>
-  <div class="event">
-    <app-event></app-event>
-  </div>
-  <div class="event">
-    <app-event></app-event>
-  </div>
-  <div class="event">
-    <app-event></app-event>
-  </div>
-  <div class="event">
-    <app-event></app-event>
+  <div class="event" *ngFor="let event of events">
+    <app-event [event]="event" [role] = "role" [view]="'events'"></app-event>
   </div>
 </div>
