--- a/src/app/my-events/my-events.component.html
+++ b/src/app/my-events/my-events.component.html
@@ -1,21 +1,6 @@
 <div class="content">
   <h1>MY EVENTS</h1>
-  <div class="event">
-    <app-event></app-event>
-  </div>
-  <div class="event">
-    <app-event></app-event>
-  </div>
-  <div class="event">
-    <app-event></app-event>
-  </div>
-  <div class="event">
-    <app-event></app-event>
-  </div>
-  <div class="event">
-    <app-event></app-event>
-  </div>
-  <div class="event">
-    <app-event></app-event>
+  <div class="event" *ngFor="let event of events">
+    <app-event [event]="event" [role] = "role" [view]="'my events'"></app-event>
   </div>
 </div>
