--- a/src/app/modal-cancel-registration/modal-cancel-registration.component.html
+++ b/src/app/modal-cancel-registration/modal-cancel-registration.component.html
@@ -4,5 +4,5 @@
 </div>
 <div mat-dialog-actions>
   <button mat-button mat-dialog-close color="warn">No</button>
-  <button mat-button mat-dialog-close color="primary" cdkFocusInitial>Yes</button>
+  <button mat-button mat-dialog-close color="primary" (click)="unregister()">Yes</button>
 </div>
